# inji-offline-verify

./: .dockerignore  .env.example  .gitattributes  .gitignore  GOOGLE_OAUTH_SETUP.md  LOGOUT_CLEANUP_FIX.md  MULTI_VC_SCANNING.md  ORGANIZATION_DATA_ISOLATION_FIX.md  README.md  STATUSLIST_IMPLEMENTATION.md  docker-compose.yml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
server/: Dockerfile  README.md  ServerREADME.md  project.json  pyproject.toml
server/backend/: db.sqlite3  entrypoint.sh  project.json  run.py
server/backend/api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/backend/api/migrations/: 0001_initial.py  0002_organization_and_membership.py  0002_verificationlog_organization_jsonldcontext.py  0003_add_verified_by_to_verification_log.py  0003_worker_fields.py  0004_delete_jsonldcontext.py  0004_organization_did.py  0005_organizationdid_publickey.py  0006_jsonldcontext.py  0007_emaillogincode.py  0008_pendingorganizationregistration.py
server/backend/backend/: settings.py  urls.py
server/backend/organization/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/backend/organization/migrations/: 0001_initial.py  0002_jsonldcontext.py  0003_revokedvc.py  0004_publickey_org_scope.py  0004_statuslistcredential_replace_revokedvc.py  0005_statuslistcredential_replace_revokedvc.py  0005_statuslistcredentialhistory_and_more.py  (+3 more)
server/backend/worker/: admin.py  models.py  serializers.py  urls.py  views.py  views_health.py
(+216 files in other folders)
